# endopath-wiki-test

./: .gitignore  README.md  pyproject.toml
Data/output/: 20250925_094552__model-llama3.1_8b__input-gyneco_texts__cfg-llm__meta.json  20250925_095130__model-deepseek-r1_7b__input-gyneco_texts__cfg-llm__meta.json  20250925_101208__model-llama3.1_8b__input-gyneco_texts__cfg-llm__meta.json  20250925_110940__model-llama3.1_8b__input-gyneco_texts__cfg-llm__meta.json  20250925_111724__model-gpt-oss_20b__input-gyneco_texts__cfg-llm__meta.json  20250925_113256__model-deepseek-r1_7b__input-gyneco_texts__cfg-llm__meta.json  (+1 more)
archives/: README.md  pyproject.toml
archives/Data/: fuction_data.py
archives/Data/DATA_PROCESSED/Correction_mots/: dictionnaire_correction.json  dictionnaire_correction_orig_Maxime.json
archives/Data/DATA_PROCESSED/ENDOPATHS_liste_mots/: feature_text_tokenized.txt  liste_mot_a_corriger.txt  liste_tous_les_mots.txt
archives/Opti_utils/: custom_metrics.py
ci/: .gitlab-ci.yml  readme.md
exploratory/: Analyse_univariee.ipynb  Analyse_univariee_script.py  Explore_features_ML_NLP.ipynb  Explore_features_ML_NLP_script.py  FAMD.ipynb  FAMD.py  ML_RF_script.py  ML_endo_2steps_script.py  PCA_MCA.ipynb  create_correct_dict_nlp.ipynb  create_correct_dict_nlp.py  exploration_gyneco_receuil_synth.ipynb  exploration_gyneco_receuil_synth.py  extraction_endometriose.py  scan_texts_dossier_gyneco.ipynb  scan_texts_dossier_gyneco.py  script_scrapping.py  test_chi2.ipynb  test_chi2.py
features/: readme.md
src/: readme.md  run_ollama_infer.py
tests/: readme.md
(+98 files in other folders)
